# ShamirRust

./: Cargo.toml  README.md
ShamirRust/: Cargo.toml
ShamirRust/src/: main.rs
shamir-algorithm/: Cargo.toml  README.md
shamir-algorithm/src/: lib.rs  tables.rs
src/: crypto.rs  main.rs
