[package]
name = "shamir-algorithm"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of Shamir's Secret Sharing algorithm using Galois Field arithmetic over GF(256)"
license = "MIT"
repository = "https://github.com/yourusername/ShamirRust"
keywords = ["cryptography", "secret-sharing", "shamir", "threshold"]
categories = ["cryptography", "algorithms"]
readme = "README.md"

[dependencies]
rand = { version = "0.9", features = ["small_rng"] }